--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,88 @@
     
 </head>
 <body>
-    <h1>TODOO</h1>
+    <h1 class="title">Stuff I need to do</h1>
 
+    <div class="all-tasks">
+        <h2 class="tas-list-title">My lists</h2>
+        <ul class="task-list">
+            <li class="list-name active-list">Youtube</li>
+            <li class="list-name">Work</li>
+            <li class="list-name">Shop</li>
+        </ul>
+        <form action="">
+            <input 
+            type="text"
+            class="new list"
+            placeholder="new list name"
+            aria-label="new list name"
+            />
+            <button class="btn create" aria-label="create new list">+</button>
+        </form>
+    </div>
+
+    <div class="todo-list">
+
+        <div class="todo-header">
+           <h2 class="list-title">YouTube</h2>
+           <p class="task-count">3 task remaining</p> 
+        </div>
+
+        <div class="todo-body">
+          <div class="tasks">
+              <div class="task">
+                  <input 
+                  type="checkbox"
+                  id="task-1"
+                  />
+                  <label for="task-1">
+                      <span class="custom-checkbox"></span>
+                      record todo list video
+                  </label>
+              </div>
+              <!--/task-1-->
+
+              <div class="task">
+                <input 
+                type="checkbox"
+                id="task-2"
+                />
+                <label for="task-2">
+                    <span class="custom-checkbox"></span>
+                    another task
+                </label>
+            </div>
+            <!--/task-2-->
+
+            <div class="task">
+                <input 
+                type="checkbox"
+                id="task-3"
+                />
+                <label for="task-3">
+                    <span class="custom-checkbox"></span>
+                    a third task
+                </label>
+            </div>
+            <!--/task-3-->
+          </div>
+          <div class="new-task-creator">
+            <form action="">
+                <input 
+                type="text"
+                class="new task"
+                placeholder="new task name"
+                aria-label="new task name"
+                />
+                <button class="btn create" aria-label="create new task">+</button>
+            </form>
+          </div>
+          <div class="delete-stuff">
+              <button class="btn delete">Clear completed tasks</button>
+              <button class="btn delete">Delete list</button>
+          </div>
+        </div>
+    </div>
 
 </body>
 </html>
