--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <h1 class="title">Stuff I need to do</h1>
+    <h1 class="title">MY-TODO</h1>
 
     <div class="all-tasks">
         <h2 class="tas-list-title">My lists</h2>
@@ -85,12 +85,12 @@
                 placeholder="new task name"
                 aria-label="new task name"
                 />
-                <button class="btn create" aria-label="create new task">+</button>
+                <button class="btn create2" aria-label="create new task">+</button>
             </form>
           </div>
           <div class="delete-stuff">
               <button class="btn delete">Clear completed tasks</button>
-              <button class="btn delete">Delete list</button>
+              <button class="btn delete2">Delete list</button>
           </div>
         </div>
     </div>
